user shipping address management update ;

--- a/itk-api/src/main/resources/i18n/exceptions_zh_cn.properties
+++ b/itk-api/src/main/resources/i18n/exceptions_zh_cn.properties
@@ -1,7 +1,16 @@
-#validationException
+#user exceptions
 1001=用户名已存在
 1002=邮箱已存在
 1003=手机号已存在
+
+#resource message
+404=找不到符合条件的对象
+201=添加成功
+202=修改成功
+203=删除成功
+
+#system exceptions
+5001=系统错误,请稍候再试
 
 
 
