--- a/itk-api/src/main/resources/i18n/exceptions_en.properties
+++ b/itk-api/src/main/resources/i18n/exceptions_en.properties
@@ -2,3 +2,6 @@
 1001=User Name Is Exist
 1002=Email Is Exist
 1003=Phone Is Exist
+
+#biz attribute not null error
+2001=Pick Self Location ID Not Null
