--- a/itk-api/src/main/resources/i18n/exceptions_en.properties
+++ b/itk-api/src/main/resources/i18n/exceptions_en.properties
@@ -6,3 +6,9 @@
 #biz attribute not null error
 2001=Pick Self Location ID Not Null
 2002=OrderIDs are required
+
+#refund exception
+3001=Refund Status Error
+3002=Order Unknown, Refund Process Error
+3003=Order Detail Unknown, Refund Process Error
+3004=Refund Reason is Required
