--- a/itk-api/src/main/resources/i18n/exceptions_en.properties
+++ b/itk-api/src/main/resources/i18n/exceptions_en.properties
@@ -12,3 +12,10 @@
 3002=Order Unknown, Refund Process Error
 3003=Order Detail Unknown, Refund Process Error
 3004=Refund Reason is Required
+3005=Operator Invalid
+3006=Refund Address Required
+3007=Reject Reason Required
+3008=Refund flowId Required
+3009=Express Company Required
+3010=Express No Required
+3011=Reject With Commodity Reason Required
