--- a/itk-api/src/main/resources/i18n/exceptions_zh_cn.properties
+++ b/itk-api/src/main/resources/i18n/exceptions_zh_cn.properties
@@ -21,6 +21,13 @@
 3002=订单编号未知,退款流程异常
 3003=订单详情未知,退款流程异常
 3004=退款理由必填
+3005=操作人不符
+3006=收货地址必填
+3007=驳回理由必填
+3008=退款单号必填
+3009=快递公司必填
+3010=物流单号必填
+3011=收货后驳回理由必填
 
 
 
